k8s/base/ingress/moneypulse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moneypulse-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: api.moneypulse.com
      http:
        paths:
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: accounts
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 80
          - path: /transactions
            pathType: Prefix
            backend:
              service:
                name: transactions
                port:
                  number: 80
  tls:
    - hosts:
        - api.moneypulse.com
      secretName: moneypulse-tls
